[tool.poetry]
name = "matrix-factorization"
version = "0.1.0"
description = ""
authors = ["elliott <elliottgruzin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
numpy = "^2.1.0"
pandas = "^2.2.2"
tqdm = "^4.66.5"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
